перелопачены стабы
